syntax = "proto3";

// Simple auth service for register and login
service AuthService {
    rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse) {}
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {}
  }

message RegisterUserRequest {
    string username = 1;
    string password = 2;
}

message RegisterUserResponse {
    bool success = 1;
    string message = 2;
}

message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message LoginUserResponse {
    bool success = 1;
    string message = 2;
    string token = 3;
}
